# agentic_shac

./: .gitignore  FPR_FIX_SUMMARY.md  pyproject.toml  roadmap.md
configs/: baseline.yaml  data.yaml
data/processed/: dev.jsonl  test.jsonl  train.jsonl
notebooks/: 01_test_brat_loader.ipynb  02_test_preprocess.ipynb  03_data_eda.ipynb  04_test_model_loading.ipynb  05_test_baseline_inference.ipynb
scripts/: cleanup_models_targeted.sh  cleanup_old_models.sh  process_full_dataset.py
src/agentic/: __init__.py  prompts.py
src/baselines/: __init__.py  llama_single.py
src/evaluation/: metrics.py
src/utils/: __init__.py  brat_loader.py  preprocess.py
tests/: README.md
tests/integration/: phase1_test_brat_loader.py  phase2_test_baseline_inference.py  phase2_test_model_loading.py  phase2_test_prompts.py  test_fpr_calculation.py
