[project]
name = "agentic_shac"
version = "0.1.0"
description = "Agentic multi-model system for Drug StatusTime classification in SHAC dataset"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "ipykernel",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

